[#549] Fix wrapping on chat card properties

--- a/styles/chat/_module.css
+++ b/styles/chat/_module.css
@@ -66,6 +66,7 @@
 	.tags {
 		font-size: var(--font-size-10);
 		display: flex;
+		flex-wrap: wrap;
 		gap: 4px;
 		.tag {
 			border: 1px solid var(--bf-color-border-gray);
